--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,3 +4,8 @@
         p {
             font-size: 140%;
         }
+ #btn-1{
+    background-color:rgb(13, 222, 62) ;
+    color:rgb(255, 0, 0);
+    padding: 10px;
+ }
