--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,13 +1,3 @@
- body {
-            background-color: beige;
-        }
-        p {
-            font-size: 140%;
-        }
- #btn-1{
-    background-color:rgb(13, 222, 62) ;
-    color:rgb(255, 0, 0);
-    padding: 10px;
-    margin-top: 20px;
- }
- 
+.castom-shadow {
+    box-shadow: 5px 5px 5px black;
+}
